[package]
name = "ComplexerNumbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-irrational = { version = "0.3.0", features = ["complex"] }
num = "*"
num-rational = "*"
num-traits = "*"
serde = "*"
